@@ -1,3 +1,7 @@
+2000-08-09  Robin * Slomkowski  <rslomkow@eazel.com>
+
+	* gconf.spec.in: made it so the specfile worked for rpm builds
+
 2000-08-07  Robin * Slomkowski  <rslomkow@eazel.com>
 
 	* gconf/Makefile.am: use top_build instead of build
